--- a/index.html
+++ b/index.html
@@ -1,33 +1,7 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Nitrates Phase 1 by ucd-cws</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Nitrates Phase 1</h1>
-        <p>This projects distributes the phase 1 nitrates data.  This is mostly access to the data used to create the technical report figures.</p>
-
-        <p class="view"><a href="https://github.com/ucd-cws/nitrates-phase1">View the Project on GitHub <small>ucd-cws/nitrates-phase1</small></a></p>
-
-
-        <ul>
-          <li><a href="https://github.com/ucd-cws/nitrates-phase1/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/ucd-cws/nitrates-phase1/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/ucd-cws/nitrates-phase1">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+---
+layout: default
+title: Nitrates Phase 1 by ucd-cws
+---
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
@@ -52,13 +26,3 @@
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/ucd-cws">ucd-cws</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
-</html>
