--- a/maps/fertilizer.html
+++ b/maps/fertilizer.html
@@ -1,18 +1,8 @@
-<!doctype html>
-<!-- The DOCTYPE declaration above will set the    -->
-<!-- browser's rendering engine into               -->
-<!-- "Standards Mode". Replacing this declaration  -->
-<!-- with a "Quirks Mode" doctype may lead to some -->
-<!-- differences in layout.                        -->
-
-<html>
-  <head>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
-    <script type="text/javascript" language="javascript" src="//cstars.github.io/ceres-maps/cmv/cmv.nocache.js"></script>
-
-    <script type="text/javascript" language="javascript">
+---
+title: fertilizer
+layout: map
+---
+<script type="text/javascript" language="javascript">
 
 var mapConfig = {
     title: "Fertilizer Loading",
@@ -161,20 +151,4 @@ var mapConfig = {
     }
 }
 
-    </script>
-
-  </head>
-  <body class="claro" style="overflow:hidden">
-
-
-    <!-- RECOMMENDED if your web app will not function without JavaScript enabled -->
-    <noscript>
-      <div style="width: 22em; position: absolute; left: 50%; margin-left: -11em; color: red; background-color: white; border: 1px solid red; padding: 4px; font-family: sans-serif">
-        Your web browser must have JavaScript enabled
-        in order for this application to display correctly.
-      </div>
-    </noscript>
-
-  </body>
-</html>
-
+</script>
