--- a/maps/figure2.html
+++ b/maps/figure2.html
@@ -1,70 +1,7 @@
 ---
 title: figure 2
 layout: map
+services: 
+    - url: http://atlas.cws.ucdavis.edu/ArcGIS/rest/services/Nitrogen_Sources_and_Loading_to_Groundwater_TR2/Fig02_and_Fig32_CAML_2010_Land_Cover/MapServer
+      label: Landcover Type
 ---
-<script type="text/javascript" language="javascript">
-
-var mapConfig = {
-    title: "Landcover",
-    //anchor: "GadgetPanel",
-    zoom: 8,
-    center: [
-        -121.01,
-        38.22
-    ],
-    selectedBasemap: "d94dcdbe78e141c2b2d3a91d5ca8b9c9",
-    basemaps: [
-
-    ],
-    searchServices: [
-        {
-            url: "http://tasks.arcgis.com/ArcGIS/rest/services/WorldLocator/GeocodeServer",
-            type: "geocoder"
-        }
-    ],
-    searchColor: {
-        outline: {
-            r: 255,
-            g: 169,
-            b: 0,
-            a: 1
-        },
-        fill: {
-            r: 255,
-            g: 169,
-            b: 0,
-            a: .025
-        }
-    },
-
-"datalayers":[
-      {
-        "type":"mapserver",
-        "label":"Landcover Type",
-        "url":"http://atlas.cws.ucdavis.edu/ArcGIS/rest/services/Nitrogen_Sources_and_Loading_to_Groundwater_TR2/Fig02_and_Fig32_CAML_2010_Land_Cover/MapServer",
-        "legendUrl":"http://atlas.cws.ucdavis.edu/ArcGIS/rest/services/Nitrogen_Sources_and_Loading_to_Groundwater_TR2/Fig02_and_Fig32_CAML_2010_Land_Cover/MapServer/legend?f=json",
-        "showLegendOnLoad":false,
-        "visible":false,
-        "opacity":0.3,
-        "isTiled":false,
-        "hasTileOption":false,
-        "legendIsGradient":false
-      },
-    ],
-    provider: {
-        icon: "icon.png",
-        popup: "Powered By: <a href='http://groundwaternitrate.ucdavis.edu'>UC Davis Report on Groundwater Nitrates</a>",
-        url: "http://groundwaternitrate.ucdavis.edu"
-    },
-    geometryServer: "http://atlas.cws.ucdavis.edu/arcgis/rest/services/Geometry/GeometryServer",
-    identifyTool: true,
-    enableCeresAdditions: true,
-    print: {
-        server: "http://sampleserver6.arcgisonline.com/arcgis/rest/services/Utilities/PrintingTools/GPServer/Export%20Web%20Map%20Task",
-        defaultTitle: "CeresMaps - Export",
-        defaultFormat: "PNG32",
-        defaultTemplate: "template_test"
-    }
-}
-
-</script>
